# saphir-wasm-multithread-example

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: main.rs
wasm-multithread/: Cargo.toml
wasm-multithread/lib/: loader.js  worker.js
wasm-multithread/src/: pool.rs
www/: index.html  index.js  worker.js
